force-app/main/default/objects/Session_Participant__c/fields/Course_Session_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_Scheduling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Session</label>
    <referenceTo>Course_Session_Scheduling__c</referenceTo>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>