force-app/main/default/objects/Session_Participant__c/fields/Participant_Company__c.field-meta.xml
<CustomField>
    <fullName>Participant_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>