force-app/main/default/objects/Session_Participant__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>